--- a/app/src/main/res/layout/activity_driving.xml
+++ b/app/src/main/res/layout/activity_driving.xml
@@ -4,15 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xception.drivingdetection.features.driving.DrivingActivity">
+    tools:context="com.xception.drivingdetection.features.driving.DrivingStateActivity">
 
     <TextView
+        android:id="@+id/driving_car_state_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:textSize="@dimen/driving_car_state_text_size"
+        app:layout_constraintBottom_toTopOf="@+id/driving_acceleration_text_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="@string/driving_car_state_in_motion"
+        tools:textColor="@color/driving_car_state_in_motion_text_color" />
+
+    <TextView
+        android:id="@+id/driving_acceleration_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/driving_car_acceleration_text_size"
+        app:layout_constraintBottom_toTopOf="@+id/driving_acceleration_unit_measure_text_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/driving_car_state_text_view"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="20" />
+
+
+    <TextView
+        android:id="@+id/driving_acceleration_unit_measure_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/driving_acceleration_unit_measure"
+        android:textSize="@dimen/driving_car_acceleration_unit_measure_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/driving_acceleration_text_view"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
 </android.support.constraint.ConstraintLayout>
