--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Driving -->
+    <color name="driving_car_state_in_motion_text_color">#209316</color>
+    <color name="driving_car_state_not_in_motion_text_color">#761e1e</color>
+
 </resources>
